docs/apache-airflow-providers-microsoft-azure/3.5.0/_sources/_api/airflow/providers/microsoft/azure/sensors/cosmos/index.rst.txt
:py:mod:`airflow.providers.microsoft.azure.sensors.cosmos`
==========================================================

.. py:module:: airflow.providers.microsoft.azure.sensors.cosmos


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.microsoft.azure.sensors.cosmos.AzureCosmosDocumentSensor




.. py:class:: AzureCosmosDocumentSensor(*, database_name: str, collection_name: str, document_id: str, azure_cosmos_conn_id: str = 'azure_cosmos_default', **kwargs)

   Bases: :py:obj:`airflow.sensors.base.BaseSensorOperator`

   Checks for the existence of a document which
   matches the given query in CosmosDB. Example:

   .. code-block::

   azure_cosmos_sensor = AzureCosmosDocumentSensor(
       database_name="somedatabase_name",
       collection_name="somecollection_name",
       document_id="unique-doc-id",
       azure_cosmos_conn_id="azure_cosmos_default",
       task_id="azure_cosmos_sensor")

   :param database_name: Target CosmosDB database_name.
   :type database_name: str
   :param collection_name: Target CosmosDB collection_name.
   :type collection_name: str
   :param document_id: The ID of the target document.
   :type document_id: str
   :param azure_cosmos_conn_id: Reference to the
       :ref:`Azure CosmosDB connection<howto/connection:azure_cosmos>`.
   :type azure_cosmos_conn_id: str

   .. py:attribute:: template_fields
      :annotation: :Sequence[str] = ['database_name', 'collection_name', 'document_id']

      

   .. py:method:: poke(self, context: airflow.utils.context.Context) -> bool

      Function that the sensors defined while deriving this class should
      override.



